feat: 반찬 조회 api 이미지 추가